Setting Border Render in Image Editor Doesn't Update Viewport #61072

Closed
opened 2019-01-31 17:41:42 +01:00 by Pablo Vazquez · 3 comments
Member

System Information
Operating system: Ubuntu 18.04
Graphics card: NVIDIA Quadro 6000

Blender Version
Broken: 3e072da45b

Short description of error
Setting the render-border (Ctrl+B) in the viewport, works.
Setting the render border in the Image Editor, doesn't update the viewport until you select something or make it refresh somehow.

screencapture_003.mov

Steps to reproduce
bug_border_render_refresh.blend

  • Open the .blend file, Render [F12]
  • In the Image Editor, set the render border with Ctrl+B
  • Switch the shading in the viewport to Rendered, it should fail by now, select anything to update and make it work.

Thanks!

PS: Bonus bug! As you can see in the video, the border-render is not visible in the Image Editor/Render Result. Should I make a new task for this or two birds one report?

**System Information** Operating system: Ubuntu 18.04 Graphics card: NVIDIA Quadro 6000 **Blender Version** Broken: 3e072da45bee **Short description of error** Setting the render-border (Ctrl+B) in the viewport, works. Setting the render border in the Image Editor, doesn't update the viewport until you select something or make it refresh somehow. [screencapture_003.mov](https://archive.blender.org/developer/F6466472/screencapture_003.mov) **Steps to reproduce** [bug_border_render_refresh.blend](https://archive.blender.org/developer/F6466491/bug_border_render_refresh.blend) * Open the .blend file, Render [F12] * In the Image Editor, set the render border with Ctrl+B * Switch the shading in the viewport to Rendered, it should fail by now, select anything to update and make it work. Thanks! ---- PS: Bonus bug! As you can see in the video, the border-render is not visible in the Image Editor/Render Result. Should I make a new task for this or two birds one report?
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez

This issue was referenced by 78daa53e89

This issue was referenced by 78daa53e89e702a1382aa9bedc8bfeb2a6ca33be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61072
No description provided.