Fix T61072: missing viewport update when setting render border in image editor.