source/blender/editors/space_image/image_ops.c
@@ -3761,6 +3761,7 @@ static int render_border_exec(bContext *C, wmOperator *op)
 		scene->r.mode |= R_BORDER;
 	}
 
+	DEG_id_tag_update(&scene->id, ID_RECALC_COPY_ON_WRITE);
 	WM_event_add_notifier(C, NC_SCENE | ND_RENDER_OPTIONS, NULL);
 
 	return OPERATOR_FINISHED;
